--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,14 @@
 {
-    "require": {
-        "minicodemonkey/amazon-alexa-php": "^0.1.5"
+  "require": {
+    "minicodemonkey/amazon-alexa-php": "^0.1.5",
+    "guzzlehttp/guzzle": "~6.0",
+    "greencape/xml-converter": "*",
+    "vlucas/phpdotenv": "^2.4",
+    "philipp15b/php-i18n": "^3.0"
+  },
+  "autoload": {
+    "psr-4": {
+      "wtf\\meier\\": "src/wtf/meier/"
     }
+  }
 }
