--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
     "guzzlehttp/guzzle": "~6.0",
     "greencape/xml-converter": "*",
     "vlucas/phpdotenv": "^2.4",
-    "philipp15b/php-i18n": "^3.0"
+    "philipp15b/php-i18n": "^3.0",
+    "slim/slim": "^3.0"
   },
   "autoload": {
     "psr-4": {
